@@ -173,6 +173,10 @@ after the upgrade, try disabling plugins.
 Refer to <a href="http://wiki.racktables.org/index.php/Plugins">the wiki</a> for more information.
 ENDOFTEXT
 ,
+	'0.21.2' => <<<'ENDOFTEXT'
+"Shared router" allocation type introduced, useful for documenting VRRP-protected addresses.
+ENDOFTEXT
+,
 );
 
 // At the moment we assume that for any two releases we can
@@ -1307,6 +1311,8 @@ INSERT INTO `Config` (varname, varvalue, vartype, emptyok, is_hidden, is_userdef
 			$query[] = "ALTER TABLE MountOperation DROP KEY `MountOperation-FK-old_molecule_id`";
 			$query[] = "ALTER TABLE MountOperation DROP KEY `MountOperation-FK-new_molecule_id`";
 			$query[] = "UPDATE Config SET varvalue = '0.21.2' WHERE varname = 'DB_VERSION'";
+			$query[] = "ALTER TABLE IPv4Allocation MODIFY TYPE ENUM('regular','shared','virtual','router','point2point', 'sharedrouter') NOT NULL DEFAULT 'regular';";
+			$query[] = "ALTER TABLE IPv6Allocation MODIFY TYPE ENUM('regular','shared','virtual','router','point2point', 'sharedrouter') NOT NULL DEFAULT 'regular';";
 			break;
 		case 'dictionary':
 			$query = reloadDictionary();
